--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -1,7 +1,7 @@
 #top{
   width: 800px;
   background-color: #dcc9f4;
-  margin: 20px 0;
+  margin: 20px auto;
   text-align: center;
 }
 .top-child{
@@ -14,7 +14,7 @@
   width: 800px;
   height: 800px;
   background-color: #ffd9df;
-  margin: 20px 0;
+  margin: 20px auto;
 }
 #middle-child01,#middle-child02,#middle-child03{
   width: 200px;
@@ -40,10 +40,9 @@
 }
 
 #bottom{
-  position: relative;
   width: 800px;
   height: 300px;
-  text-align: center;
+  margin: 20px auto;  
   background-color: #87ceeb;
 }
 #bottom-child01,#bottom-child02,#bottom-child03{
@@ -52,14 +51,10 @@
   background-color: #e5dcf0;
 }
 #bottom-child02{
-  position: absolute;
-  top: 100px;
+  position: relative;
   left: 200px;
-
 }
 #bottom-child03{
-  position: absolute;
-  top: 200px;
+  position: relative;
   left: 400px;
- 
 }
